--- a/web/themes/basicblog/css/style.css
+++ b/web/themes/basicblog/css/style.css
@@ -1,13 +1,3 @@
-h1, h2, h3, h4, h5, h6 {
-    font-family: Arial, sans-serif;
-}
-article {
-    font-family: serif;
-    background-color: bisque;
-    padding: 1rem;
-    padding-top: 0.1rem;
-}
-
 .visually-hidden {
     position: absolute !important;
     overflow: hidden;
@@ -15,4 +5,53 @@ article {
     width: 1px;
     height: 1px;
     word-wrap: normal;
-  }
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Arial, sans-serif;
+}
+article {
+    font-family: serif;
+    padding: 1rem;
+    padding-top: 0.1rem;
+}
+header {
+    display: flex;
+    background-color: mediumpurple;
+    color: #fff;
+    padding: 1rem;
+}
+
+header ul {
+    display: flex;
+    list-style: none;
+    margin: 0 0 0 3rem;
+    padding: 0;
+    gap: 1rem;
+    align-items: center;
+}
+
+header ul li {
+    margin: 0;
+}
+
+header ul li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    transition: background-color 0.2s;
+}
+
+header ul li a:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 4px;
+}
+
+#block-basicblog-site-branding a {
+    color: #fff;
+    font-size: 3.5rem;
+}
+
+code {
+    background-color: #f0f0f0;
+}
