--- a/web/themes/basicblog/css/style.css
+++ b/web/themes/basicblog/css/style.css
@@ -17,7 +17,13 @@ article {
 }
 header {
     display: flex;
-    background-color: mediumpurple;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+
+    width:45%;
+    background-color: #d35400;
     color: #fff;
     padding: 1rem;
 }
@@ -25,7 +31,7 @@ header {
 header ul {
     display: flex;
     list-style: none;
-    margin: 0 0 0 3rem;
+    margin: 0 0 0 0;
     padding: 0;
     gap: 1rem;
     align-items: center;
