--- a/web/themes/basicblog/css/style.css
+++ b/web/themes/basicblog/css/style.css
@@ -1,7 +1,7 @@
 .visually-hidden {
     position: absolute !important;
     overflow: hidden;
-    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: rect(1px, 1px, 1px, 1px);
     width: 1px;
     height: 1px;
     word-wrap: normal;
@@ -23,9 +23,11 @@ header {
     gap: 1rem;
 
     width:45%;
+    margin: 0 auto;
     background-color: #d35400;
     color: #fff;
     padding: 1rem;
+    border-radius: 6px;
 }
 
 header ul {
@@ -56,8 +58,13 @@ header ul li a:hover {
 #block-basicblog-site-branding a {
     color: #fff;
     font-size: 3.5rem;
+    text-decoration: none;
 }
 
 code {
     background-color: #f0f0f0;
+}
+
+#block-basicblog-siteinfo p {
+    font-size: 0.8rem;
 }
