--- a/web/themes/basicblog/templates/node--teaser.html.twig
+++ b/web/themes/basicblog/templates/node--teaser.html.twig
@@ -62,7 +62,7 @@
  * @ingroup themeable
  */
 #}
-<article{{ attributes.addClass('full') }}>
+<article{{ attributes.addClass('teaser') }}>
 
   {{ title_prefix }}
   {% if label and not page %}
