--- a/web/themes/basicblog/css/style.css
+++ b/web/themes/basicblog/css/style.css
@@ -70,10 +70,12 @@ header ul li a {
     padding: 0.5rem 1rem;
     transition: background-color 0.2s;
 }
-
 header ul li a:hover {
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 4px;
+}
+header a:visited {
+    color: #fff;
 }
 
 footer {
