--- a/web/themes/basicblog/css/style.css
+++ b/web/themes/basicblog/css/style.css
@@ -113,3 +113,36 @@ div.tags {
     padding-top: 1rem;
 }
 
+blockquote {
+  background: #f9f9f9;
+  border-left: 2px solid #e48e54;
+  margin: 1.5em 10px;
+  padding: 1rem;
+}
+
+
+
+/* Citation styling. */
+.footnote__citation,
+.footnote__citation-separator {
+  position: relative;
+  top: -0.2em;
+  vertical-align: top;
+  font-size: 0.73em;
+}
+/* References styling. */
+.footnotes {
+  position: relative;
+  margin: 4em 0 2em;
+  padding-left: 0;
+  border-top: 1px solid #a2acbe;
+  font-size: 0.9em;
+}
+.footnotes__item-wrapper {
+  display: grid;
+  grid-template-columns: minmax(auto, 3rem) 1fr;
+  margin-top: 0.5em;
+}
+.footnotes__item-wrapper p {
+  display: inline;
+}
